# palisade_python_test

./: .gitignore  CMakeLists.txt  Contributing.md  README.md  setupLSVM.sh  setuppython  status.txt
demoData/: lsvm-ovarian-check.csv  lsvm-ovarian-model.csv
demoData/cancerSVM/: cancerSVMparams.txt
python/: confusion.py  lsvm-credit.xpy  lsvm-ion.xpy  lsvm-ovarian.py  lsvm.py  ovarian.py
python/old_code/: README_LSVM.md  confusion.py  fileTransfer.py  lsvm.py
src/: ckks_wrapper.cpp  ckks_wrapper.h  cryptointerface.xcpp  cryptointerface.xh  pycrypto.cpp  pycrypto.xcpp  tbolininterface.xcpp  tbolininterface.xh
